# wackdb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/proto/: query.proto
crates/cli/src/: executor.rs  grpc.rs  main.rs  repl.rs  server.rs
crates/cli_common/: Cargo.toml
crates/cli_common/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/benches/: btree.rs  page.rs
crates/engine/src/: bootstrap.rs  btree.rs  buffer_pool.rs  catalog.rs  db.rs  engine.rs  file.rs  file_format.rs  fm.rs  index_pager.rs  lib.rs  lru.rs  master.rs  page.rs  page_cache.rs  paging.rs  persistence.rs  server.rs  sm.rs  types.rs  util.rs  vm.rs  wal.rs
crates/lexer/src/: lib.rs  token.rs
crates/macros/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/docs/: grammar.md
crates/parser/src/: ast.rs  consts.rs  lib.rs  recursion.rs
docs/: assumptions.md  caching.md  databases_and_tables.md  file_layout.md  notes.md  problems_for_future_me.md  usage.md
src/: main.rs
src/core/: mod.rs
src/core/lexer/: lexer.rs  mod.rs
src/core/parser/: mod.rs  parser.rs
