[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lexer = { path = "../lexer" }
cli_common = { path = "../cli_common" }
parser = { path = "../parser" }
engine = { path = "../engine" }
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.64"
tabled = "0.16.0"
anyhow = "1.0.89"

[lints.clippy]
pedantic = "warn"